GNOME Bugzilla – Bug 629174
Fix "disabled_books" GConf key
Last modified: 2010-09-13 16:25:00 UTC
devhelp-2.31.91-1.fc14.x86_64 Broken schemas file...
Created attachment 169857 [details] [review] broken schemas file
Created attachment 169858 [details] [review] fix conf usage
commit ee54234517aea3bab98118c40514b69ee054e008 Author: Bastien Nocera <hadess@hadess.net> Date: Thu Sep 9 15:17:52 2010 +0100 Fix use of "disabled_books" The schemas actually requires books_disabled instead. https://bugzilla.gnome.org/show_bug.cgi?id=629174 commit 948dfabc2160e2e911c6e3b3c7f62bd6aefeeeca Author: Bastien Nocera <hadess@hadess.net> Date: Thu Sep 9 15:17:02 2010 +0100 Fix broken schemas file WARNING: no <list_type> specified for schema of type list WARNING: invalid or missing list_type for schema (/schemas/apps/devhelp/state/main/contents/books_disabled) WARNING: failed to install schema `/schemas/apps/devhelp/state/main/contents/books_disabled', locale `C': Schema specifies type list but doesn't specify the type of the list elements https://bugzilla.gnome.org/show_bug.cgi?id=629174
*** Bug 629173 has been marked as a duplicate of this bug. ***
commit ee54234517aea3bab98118c40514b69ee054e008 introduced a build / link error: +dh_util_state_load_books_disabled is defined in dh-utils.c, but the prototype in dh-utils.h got not changed. As a consequence, it is undefined in dh-book-manager.c Reopening a bug though seems not possible :)