Fix use of "disabled_books"

The schemas actually requires books_disabled instead.

https://bugzilla.gnome.org/show_bug.cgi?id=629174